--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.0.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "autoprefixer": "^10.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.0"
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prop-types": "^15.8.1",
     "tailwind-styled-components": "^2.2.0",
     "vite": "^5.0.8"
   }
