--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
-amplify/team-provider-info.json
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+
+amplify/**/*
