--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.16",
+    "i18next": "^23.7.13",
+    "i18next-http-backend": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
